force-app/main/default/objects/Weekly_Result__c/Weekly_Result__c.object-meta.xml
<CustomObject>
    <label>Weekly Result</label>
    <nameField>
        <displayFormat>WR-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weekly Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>