force-app/main/default/objects/Weekly_Result__c/fields/Player__c.field-meta.xml
<CustomField>
    <fullName>Player__c</fullName>
    <label>Player</label>
    <referenceTo>Player__c</referenceTo>
    <relationshipLabel>Weekly Results</relationshipLabel>
    <relationshipName>Weekly_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>