force-app/main/default/objects/Weekly_Result__c/fields/Week__c.field-meta.xml
<CustomField>
    <fullName>Week__c</fullName>
    <label>Week</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>