force-app/main/default/objects/Weekly_Result__c/fields/Win_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Win_Percentage__c</fullName>
    <formula>IF(Total_Points_Available__c == 0, 0,  Total_Points__c  /  Total_Points_Available__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Win Percentage</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>