force-app/main/default/objects/Weekly_Result__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Week__c</columns>
    <columns>Player__c</columns>
    <columns>Total_Points_Available__c</columns>
    <columns>Total_Points__c</columns>
    <columns>Win_Percentage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>